# TEMdb

./: .bumpversion.toml  .pre-commit-config.yaml  Dockerfile  Dockerfile.docs  README.md  dev.env  docker-compose.yml  generate_schema_diagram.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run.py  start.sh
.github/workflows/: ci.yml  release.yml
docs/: api_redoc.md  api_swagger.md  index.md  schema_Imaging_erd.md  schema_Preparation_erd.md  schema_erd.md
docs/models/: Acquisition.md  AcquisitionDocument.md  AcquisitionTask.md  AcquisitionTaskDocument.md  Block.md  BlockDocument.md  CuttingSession.md  CuttingSessionDocument.md  GridDocument.md  ROI.md  ROIDocument.md  Section.md  SectionDocument.md  Specimen.md  SpecimenDocument.md  Substrate.md  SubstrateDocument.md  Tile.md  TileDocument.md
examples/: client.py
temdb/: config.py  database.py  dependencies.py  exception_handlers.py  main.py
temdb/api/: acquisition.py  analysis.py  block.py  cutting_session.py  imaging_session.py  roi.py  section.py  specimen.py
temdb/api/v1/: grids.py
temdb/api/v2/: acquisition.py  analysis.py  block.py  cutting_session.py  imaging_session.py  quality_control.py  roi.py  section.py  specimen.py  substrate.py  tasks.py
temdb/models/: acquisition.py  block.py  cutting_session.py  enum_schemas.py  error.py  imaging_session.py  roi.py  section.py  specimen.py
temdb/models/v1/: grids.py
temdb/models/v2/: acquisition.py  base.py  block.py  cutting_session.py  enum_schemas.py  imaging_session.py  quality_control.py  roi.py  section.py  specimen.py  substrate.py  task.py  tile.py
tests/: conftest.py  generators.py  test_acquisition_api.py  test_acquisition_task_api.py  test_block_api.py  test_cutting_session_api.py  test_data_integration.py  test_roi_api.py  test_section_api.py  test_specimen_api.py  test_substrate.py
tests/client/: conftest.py  test_acquisition.py  test_block.py  test_client.py  test_cutting_session.py  test_roi.py
tests/integration/: conftest.py  generators.py  test_data_integration.py
tests/models/: test_acquisition_models.py  test_block_models.py  test_cutting_session_models.py  test_enums.py  test_lens_correction_field.py  test_quality_control_models.py  test_roi_models.py  test_section_models.py  test_specimen_models.py  test_substrate_models.py  test_task_models.py  test_tile_models.py  test_uri.py
tests/server/: conftest.py  test_acquisition_api.py  test_acquisition_task_api.py  test_block_api.py  test_cutting_session_api.py  test_lens_correction_api.py  test_roi_api.py  test_section_api.py  test_specimen_api.py  test_substrate.py
